# queries

./: .buildconfig  .gitignore  COPYING  Cargo.toml  README.md  build.rs  build.sh  com.github.limads.Queries.json  com.github.limads.queries.json  io.github.limads.Queries.json  postinstall.sh  queries.desktop  queries.doap  vendor.sh
assets/: resources.gresource
assets/styles/: tables.css
data/: com.github.limads.Papers.appdata.xml  com.github.limads.Queries.appdata.xml  com.github.limads.Queries.desktop  com.github.limads.Queries.gschema.xml  io.github.limads.Queries.appdata.xml  io.github.limads.Queries.desktop  io.github.limads.Queries.gschema.xml
data/resources/: resources.gresource.xml
docs/: building.md  distribution.md  userguide.md  visualization.md
docs/examples/: iris.sql  plot-iris2.sql  plots-iris.sql  plots.sql
scripts/: build.sh  bundle.sh  install.sh  postinstall.sh  vendor.sh
src/: lib.rs  main.rs
src/client/: .goutputstream-N7LPE1  conn.rs  environment.rs  exec.rs  listener.rs  mod.rs  scripts.rs  user.rs  workspace.rs
src/command/: mod.rs
src/report/: mod.rs
src/server/: .goutputstream-IHOPC2  arrow.rs  mod.rs  pg.rs  sqlite.rs
src/sql/: copy.rs  mod.rs  notify.rs  object.rs  parsing.rs
src/tables/: column.rs  environment.rs  field.rs  mod.rs  nullable.rs  nullable_column.rs  pgvtab.rs  report.rs  source.rs  stdin.rs  table.rs
src/ui/: analyze.rs  apply.rs  builder.rs  create.rs  editor.rs  file_list.rs  form.rs  menu.rs  mod.rs  model.rs  overview.rs  plotarea.rs  plots.rs  schema_tree.rs  settings.rs  sidebar.rs  table.rs  title.rs  workspace.rs
src/user/: mod.rs
tests/: common.rs  connect.rs  exec.rs  files.rs  gen.rs  mod.rs  sqlite.rs  types.rs
