[package]
name = "queries"
version = "0.1.3"
edition = "2018"

[dependencies]
gtk4 = "0.4.8"
sourceview5 = { version = "0.4.2" }
libadwaita = "0.1.1"
postgres-native-tls = "0.5.0"
tokio = { version = "1.21.1", features=["rt", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
futures = "0.3.24"
native-tls = "0.2.10"
sqlparser = "0.25.0"
regex = { version = "1.6.0" }
rust_decimal = { version = "1.26.1", features = ["db-postgres"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
csv = "1.1.6"
num-traits="0.2.14"
quick-xml = "0.23.0"
either = "1.6.1"
chrono = { version = "0.4.19", default-features=false }
once_cell = "1.9.0"
anyhow = "1.0"
ordinal = "0.2"
base64 = "0.13.0"
rand = "0.8.5"
papyri = { version = "0.1.2", features = ["gdk4", "gdk-pixbuf", "cairo-rs"] }
stateful =  "0.1"
# filecase = "0.1.3"
filecase = { path="../filecase" }

[[bin]]
name="queries"
path="src/main.rs"

[build-dependencies]
gtk4 = "0.4"

