[package]
name = "queries"
version = "0.1.5"
edition = "2018"

[dependencies]
gtk4 = "0.5.1"
sourceview5 = { version = "0.5.0" }
libadwaita = { version = "0.2.0", features = ["v1_2"] }
postgres-native-tls = "0.5.0"
tokio = { version = "1.21.1", features=["rt", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8", "with-geo-types-0_7"] }
uuid = "0.8"
geo-types = { version = "0.7", features=["serde"] }
futures = "0.3.24"
native-tls = "0.2.11"
sqlparser = "0.26.0"
rusqlite= { version = "0.28.0", features = ["bundled", "column_decltype"] }
regex = { version = "1.6.0" }
rust_decimal = { version = "1.26.1", features = ["db-postgres"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
csv = "1.1.6"
num-traits="0.2.14"
quick-xml = "0.23.0"
either = "1.6.1"
chrono = { version = "0.4.19", default-features=false }
once_cell = "1.9.0"
anyhow = "1.0"
ordinal = "0.2"
base64 = "0.13.0"
rand = "0.8.5"
version = "3.0.0"
papyri = { version = "0.1.3", features = ["gdk4", "gdk-pixbuf", "cairo-rs"] }
stateful =  "0.1"
stateful_local = { package = "stateful", path = "../stateful" }
stateful-derive={path="../stateful-derive"}
filecase = "0.1.5"
url = "2.3.1"
tuples = "1.6.0"

[[bin]]
name="queries"
path="src/main.rs"

[build-dependencies]
glib-build-tools = "0.16.0"

